--- a/App/css/style.css
+++ b/App/css/style.css
@@ -1,4 +1,8 @@
 
+/* <------------------- ALL -------------------> */
+
+
+
 
 /* <------------------- HEADER -------------------> */
 .contener header{
